# SVA

./: .gitignore  E2E_TESTING_COMPLETE.md  PROJECT_OVERVIEW.md  README.md  report_test.html  requirements.txt  sva_progress_report.json  test_real_chat_report.py  test_report_integration.py  transcription_base_auto-detect_language.json  transcription_base_force_english_(en).json  transcription_base_force_indonesian_(id).json  transcription_base_force_malay_(ms).json  transcription_result.txt  transcription_small_auto-detect_language.json  transcription_small_force_english_(en).json  transcription_small_force_indonesian_(id).json  transcription_small_force_malay_(ms).json  transcription_tiny_auto-detect_language.json  transcription_tiny_force_english_(en).json  transcription_tiny_force_indonesian_(id).json  transcription_tiny_force_malay_(ms).json
backend/: README.md  analysis_report.txt  audio_analysis_report.txt  backend_service.py  backend_service_fixed.py  compliance_checker.py  compliance_report.json  comprehensive_analysis_report.txt  comprehensive_test.py  create_basic_sva.py  create_test_video_guide.txt  download_youtube_clip.py  e2e_test.py  enhanced_audio_test.py  fix_video_issue.py  get_speech_video.py  get_test_videos.py  grpc_server.py  grpc_server_fixed.py  grpc_server_fixed_new.py  manual_video_guide.txt  mcp_server_status.json  mcp_status_server.py  network_isolation_test.py  project_progress_tracker.py  simple_video_analyzer.py  sva_pb2.py  sva_pb2_grpc.py  (+9 more)
frontend/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
frontend/src-tauri/src/: lib.rs  main.rs
(+97 files in other folders)
